--- a/conta-comigo/src/_assets/css/modules/core modules/perfil.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/perfil.module.css
@@ -360,6 +360,7 @@ select {
 @media screen and (max-width: 1150px) {
     .container {
         margin-top: 140px;
+        background-color: red;
     }
 }
 
