--- a/conta-comigo/src/_assets/css/modules/divisao modules/pagamento_cliente.module.css
+++ b/conta-comigo/src/_assets/css/modules/divisao modules/pagamento_cliente.module.css
@@ -238,11 +238,11 @@
 @media screen and (max-width: 1150px) {
 
     .main {
-        margin-top: 50px;
+        margin-top: 20px;
     }
 
     .container {
-        margin-top: 150px;
+        margin-top: 40px;
     }
 
 }
@@ -252,7 +252,6 @@
     .container {
         width: 400px;
         height: 500px;
-        margin-top: 120px;
 
     }
 
@@ -288,16 +287,18 @@
 
 @media screen and (max-width: 600px) {
 
+    .pessoa{
+       width: 270px;
+    }
 
     .container {
-        width: 340px;
+        width: 250px;
         height: 450px;
-        margin-top: 120px;
 
     }
 
     .container_head {
-        margin-left: 5px;
+        margin-left: -40px;
         font-size: 23px;
         font-weight: bold;
         width: 250px;
@@ -316,8 +317,8 @@
     }
 
     .container_main {
-        margin-left: -30px;
-        width: 330px;
+        margin-left: -50px;
+        width: 250px;
         height: 260px;
         display: flex;
         margin-top: 10px;
@@ -328,11 +329,9 @@
 
     .buttons {
         margin-top: 40px;
-        margin-left: -20px;
+        margin-left: -70px;
         width: 300px;
     
-
-
     }
 
 
