--- a/conta-comigo/src/_assets/css/modules/divisao modules/total_divisao.module.css
+++ b/conta-comigo/src/_assets/css/modules/divisao modules/total_divisao.module.css
@@ -145,11 +145,11 @@
 @media screen and (max-width: 1150px) {
 
     .main {
-        margin-top: 50px;
+        margin-top: 20px;
     }
 
     .container {
-        margin-top: 150px;
+        margin-top: 40px;
     }
 
 }
@@ -159,7 +159,6 @@
     .container {
         width: 400px;
         height: 300px;
-        margin-top: 120px;
 
     }
 
@@ -189,14 +188,13 @@
 
 
     .container {
-        width: 320px;
+        width: 250px;
         height: 310px;
-        margin-top: 120px;
 
     }
 
     .container_head {
-        margin-left: 5px;
+        margin-left: -30px;
         font-size: 23px;
         font-weight: bold;
         width: 250px;
@@ -221,12 +219,13 @@
         display: flex;
         margin-top: -5px;
         justify-content: center;
+        align-items: center;
         flex-direction: column;
     }
 
     .buttons {
         margin-top: -10px;
-        margin-left: -26px;
+        margin-left: -60px;
         width: 280px;
 
 
