--- a/conta-comigo/src/_assets/css/modules/core modules/add_itens.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/add_itens.module.css
@@ -133,20 +133,20 @@
     margin-top: 20px;
 }
 
-
+/* 
 table{
     width: 400px;
     margin-top: 40px;
     overflow: auto;
 
-}
+} */
 
 table tr{
     /* background-color: cadetblue; */
-    height: 50px;
+    /* height: 50px; */
 }
 
-table tr th{
+/* table tr th{
     text-align: left;
 }
 
@@ -154,7 +154,7 @@ table input{
     font-size: 18px;
     border: none;
     padding: 5px 10px;
-}
+} */
 
 .ipt_enable{
     border: 2px solid black;
