--- a/conta-comigo/src/_assets/css/modules/divisao modules/total_divisao.module.css
+++ b/conta-comigo/src/_assets/css/modules/divisao modules/total_divisao.module.css
@@ -133,13 +133,13 @@
 }
 
 .container_main {
-    /* background-color: brown; */
     width: 320px;
     height: 230px;
     display: flex;
     margin-top: -5px;
     justify-content: center;
     flex-direction: column;
+    overflow: auto;
 }
 
 @media screen and (max-width: 1150px) {
