--- a/conta-comigo/src/_assets/css/modules/core modules/add_itens.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/add_itens.module.css
@@ -216,9 +216,9 @@ table img{
 }
 
 .cadastrarItem{
-    position: absolute;
+    position: fixed;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: rgb(0, 0, 0,60%);
     display: flex;
     justify-content: center;
