--- a/conta-comigo/src/_assets/css/modules/core modules/cardapio.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/cardapio.module.css
@@ -167,7 +167,7 @@ table tr .editarApagar{
 }
 
 .cadastrarItem{
-    position: absolute;
+    position: fixed;
     width: 100vw;
     height: 100vh;
     background-color: rgb(0, 0, 0,60%);
