--- a/conta-comigo/src/_assets/css/modules/core modules/funcionarios.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/funcionarios.module.css
@@ -92,7 +92,7 @@
 }
 
 .cadastrarItem{
-    position: absolute;
+    position: fixed;
     width: 100vw;
     height: 100vh;
     background-color: rgb(0, 0, 0,60%);
