--- a/site/src/_assets/css/modules/core modules/perfil.module.css
+++ b/site/src/_assets/css/modules/core modules/perfil.module.css
@@ -295,6 +295,7 @@ flex-direction: column;
 
     margin-left: -62px;
     margin-top: 10px;
+    cursor: pointer;
     
 }
 .baixar img{
@@ -308,6 +309,7 @@ flex-direction: column;
     margin-top: 15px;
     display: flex;
     flex-direction: row;
+    cursor: pointer;
 
 }
 .importacao img{
@@ -441,7 +443,6 @@ flex-direction: column;
         font-size: 16px;
         margin-top: 50px;
         width: 150px;
-        background-color: aqua;
         
     }
 
@@ -481,6 +482,213 @@ flex-direction: column;
         background-color: var(--secundary-color);
         border-radius: 10px;
     }
+
+}
+
+
+
+
+@media screen and (max-width: 900px) {
+    .card .card_main .card_header .card_titulo {
+        font-size: 16px;
+    }
+
+    .container {
+        justify-content: center;
+        margin-top: 110px;
+        height: 800px;
+        
+    }
+
+
+    .container .up {
+        flex-direction: column;
+        align-items: center;
+   
+    }
+
+    .container .up .card {
+        margin-top: 20px;
+    }
+
+    .container .mid .card {
+        width: 42%;
+        margin-top: 20px;
+    }
+
+    .container .mid {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      
+
+    }
+    .container .mid p{
+       flex-direction: row;
+
+        width: 150px;
+    }
+
+
+
+    .rightSide .valor {
+        display: none;
+    }
+
+    .rightSide .listar {
+        display: none;
+    }
+
+
+    .rightSide {
+        width: 100px;
+        margin-left: 30px;
+    }
+
+    .leftSide {
+        margin-left: 20px;
+    }
+
+    .cadeado {
+        margin-left: 30px;
+    }
+
+    .leftSide .titulo {
+        font-size: 18px;
+    }
+
+    .leftSide p {
+        font-size: 16px;
+    }
+
+    .select {
+        flex-direction: column;
+    }
+
+    .grupo {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .container .bot {
+        background-color: white;
+        width: 47%;
+        height: 169px;
+        justify-content: center;
+        border-radius: 15px;
+        display: flex;
+        align-items: center;
+        margin-left: 215px;
+        margin-top: 20px;
+    }
+
+    .container .bot .card {
+        width: 50%;
+        margin-left: 30px;
+        display: flex;
+        flex-direction: row;
+       
+
+
+    }
+    .container .bot .card .card_titulo{
+        font-size: 19px;
+    }
+
+    .container .bot .card p {
+        display: none;
+    }
+
+    .chave {
+        margin-left:0px;
+        margin-right: 30px;
+        font-size: 16px;
+        margin-top: 10px;
+        width: 150px;
+      
+        
+    }
+
+    .add_pix {
+        width: 25px;
+        height: 25px;
+        font-size: 13px;
+        font-weight: bold;
+        color: white;
+        border: none;
+        background-color: var(--secundary-color);
+        border-radius: 15px;
+        margin-top: 10px;
+        cursor: pointer;
+        margin-left: 10px;
+   
+    }
+
+    .add_pix img {
+        margin-top: 3px;
+        width: 13px;
+        height: 13px;
+    }
+
+    .lineGreen {
+        margin-top: 10px;
+        width: 7px;
+        height: 120px;
+        background-color: var(--paletaNum1);
+        border-radius: 10px;
+        margin-left: 5px;
+
+    }
+    .lineBlack {
+        width: 20px;
+        height: 120px;
+        background-color: var(--secundary-color);
+        border-radius: 10px;
+    }
+    
+ .card_dados .cadastrar {
+    display: flex;
+    justify-content: left;
+    font-size: 22px;
+    cursor: pointer;
+    width: 220px;
+
+
+}
+ .card_dados2 {
+display: flex;
+flex-direction: column;
+
+}
+
+.baixar {
+    display: flex;
+    flex-direction: row;
+
+    margin-left: -62px;
+    margin-top: 10px;
+    
+}
+.baixar img{
+    width: 25px;
+    height: 25px;
+    margin-left: 15px;
+
+}
+.importacao {
+    margin-left: -58px;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: row;
+
+}
+.importacao img{
+    margin-left: 15px;
+    width: 25px;
+    height: 25px;
+}
+
+
 
 }
 
