--- a/site/src/_assets/css/modules/divisao modules/divisao_pers.module.css
+++ b/site/src/_assets/css/modules/divisao modules/divisao_pers.module.css
@@ -100,7 +100,7 @@
     justify-content: space-around;
     flex-wrap: wrap;
     overflow: scroll;
-
+    padding-bottom: 10px;
 
 }
 
@@ -384,7 +384,6 @@
         width: 300px;
         height: 290px;
 
-
     }
 
     .cardzin {
@@ -392,7 +391,6 @@
         width: 210px;
         margin-top: 25px;
         margin-right: 70px;
-
     }
 
     .container .container_right {
